# ridgehacks2025

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1709239765889-0778667431376.mjs
.github/workflows/: build.yml
api/: .env  Cargo.toml  data.db
api/src/: app.rs  config.rs  database.rs  logger.rs  main.rs
api/src/routes/: info.rs  mod.rs  stats.rs  subscribe.rs  unsubscribe.rs
api/src/routes/admin/: mod.rs  publish.rs
api/src/sql/: create_subscribers.sql  insert_subscribers.sql
public/: manifest.json  service-worker.js
src/: App.svelte  main.ts  misc.ts  settings.ts
src/assets/: data.json  judges.json  organizers.json  schedule.json  sponsors.json
src/components/: Faq.svelte  Judges.svelte  Map.svelte  Organizers.svelte  Schedule.svelte  Sponsors.svelte  Updates.svelte
src/lib/: Faq.svelte  InnerLink.svelte  Link.svelte  ListItem.svelte  Section.svelte  Sponsor.svelte  Time.svelte
src/style/: main.scss  typefaces.scss
