[package]
name = "api"
version = "0.1.0"
edition = "2021"


[dependencies]
afire = { version = "3.0.0-alpha.3", features = [
    "extensions",
    "tracing",
], default-features = false }
anyhow = "1.0.79"
base64 = "0.13.1"
ctrlc = "3.4.2"
dotenvy = "0.15.7"
parking_lot = "0.12.1"
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
tokio-scoped = "0.2.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
web-push = "0.10.1"
